json to model completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,3 +91,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+json_to_model:
+  source: ./assets/config
+  output: ./lib/config/api
