--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  json_serializable: ^6.1.4
-  json_annotation: ^4.4.0
-  quiver: ^3.0.1+1
-  json_to_model: ^3.0.1
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
@@ -91,7 +88,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
-json_to_model:
-  source: ./assets/config
-  output: ./lib/config/api
